test/domains/neth/tupleScalar.good
tupleScalar.chpl:1: error: Ranges defined using bounds of type 'int(64)..1*int(64)' are not currently supported
