test/domains/neth/tupleScalar.chpl
var shouldBreak = 0..(10,);
